--- a/unpackaged/main/default/classes/SOM_Wr_DisplayLineItem.cls
+++ b/unpackaged/main/default/classes/SOM_Wr_DisplayLineItem.cls
@@ -40,4 +40,6 @@ public with sharing class SOM_Wr_DisplayLineItem {
     public Decimal totalLines;
     @AuraEnabled
     public String family;
+    @AuraEnabled
+    public String function;
 }
