--- a/unpackaged/main/default/classes/SOM_TranslateShipment.cls
+++ b/unpackaged/main/default/classes/SOM_TranslateShipment.cls
@@ -39,6 +39,7 @@ public with sharing class SOM_TranslateShipment {
                 outp.serialNumber   = input.serialNumber;
                 outp.tracking       = input.tracking;
                 outp.dispatchDate   = input.dispatchDate;
+                outp.sku10Digits    = input.sku10Digits;
                 collectionOutput.add(outp);
             }
         }
