--- a/unpackaged/main/default/classes/SOM_SalesPaymentsReportUKMonthSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_SalesPaymentsReportUKMonthSchedule.cls
@@ -6,9 +6,7 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
     @future(callout=true)
     public static void monthExport() {
         
-
         Try{
-
             
             DateTime firstDayOfLastMonth = (DateTime)System.Today().toStartOfMonth().addMonths(-1);
             String firstDay = firstDayOfLastMonth.format('MM/dd/yyyy');
@@ -173,17 +171,16 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
             email.setToAddresses( toAddresses );
             emails.add(email);
             
-
             Messaging.sendEmail(emails);
             
             Logs.debug('Sales and payments report month Schedule UK','SOM_SalesPaymentsReportUKMonthSchedule','monthExport','','');   
             Logs.info('Sales and payments report month Schedule UK','SOM_SalesPaymentsReportUKMonthSchedule','monthExport','','');   
             
         }catch(Exception e){
-            Logs.error(e,'SOM_SalesPaymentsReportUKMonthSchedule','monthExport','','');   
+            Logs.error(e,'SOM_SalesPaymentsReportUKMonthSchedule UK','monthExport','','');   
         }  
         
-
+        
     }   
     
     
