--- a/unpackaged/main/default/classes/SOM_USReportMonthSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_USReportMonthSchedule.cls
@@ -5,7 +5,6 @@ public with sharing class SOM_USReportMonthSchedule Implements Schedulable {
     
     @future(callout=true)
     public static void monthExport() {
-
         
         Try{            
             
@@ -147,16 +146,14 @@ public with sharing class SOM_USReportMonthSchedule Implements Schedulable {
             email.setToAddresses( toAddresses );
             emails.add(email);
             
-
             Messaging.sendEmail(emails);
             
             Logs.debug('Sales and payments report month Schedule US','SOM_USReportMonthSchedule','monthExport','','');   
             Logs.info('Sales and payments report month Schedule US','SOM_USReportMonthSchedule','monthExport','','');   
             
         }catch(Exception e){
-            Logs.error(e,'SOM_USReportMonthSchedule','monthExport','','');   
+            Logs.error(e,'SOM_USReportMonthSchedule US','monthExport','','');   
         }  
-
         
     }
 }
