--- a/unpackaged/main/default/classes/SOM_SalesPaymentsReportMonthAUSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_SalesPaymentsReportMonthAUSchedule.cls
@@ -148,8 +148,8 @@ public with sharing class SOM_SalesPaymentsReportMonthAUSchedule Implements Sche
             
             Messaging.sendEmail(emails);
             
-            Logs.debug('Sales and payments monthly report Schedule AU','SOM_SalesPaymentsReportMonthAUSchedule','monthExport','','');   
-            Logs.info('Sales and payments monthly report Schedule AU','SOM_SalesPaymentsReportMonthAUSchedule','monthExport','','');   
+            Logs.debug('Sales and payments report Schedule Monthly  AU','SOM_SalesPaymentsReportMonthAUSchedule','monthExport','','');   
+            Logs.info('Sales and payments report Schedule Monthly  AU','SOM_SalesPaymentsReportMonthAUSchedule','monthExport','','');   
             
         }catch(Exception e){
             Logs.error(e,'SOM_SalesPaymentsReportMonthAUSchedule AU','monthExport','','');   
