--- a/unpackaged/main/default/classes/SOM_SalesPaymentsReportMonthJPSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_SalesPaymentsReportMonthJPSchedule.cls
@@ -148,8 +148,8 @@ public class SOM_SalesPaymentsReportMonthJPSchedule Implements Schedulable{
             
             Messaging.sendEmail(emails);
         
- 		    Logs.debug('Sales and payments report month Schedule JP','SOM_SalesPaymentsReportMonthJPSchedule','monthExport','','');   
-            Logs.info('Sales and payments report month Schedule JP','SOM_SalesPaymentsReportMonthJPSchedule','monthExport','','');   
+ 		    Logs.debug('Sales and payments report Schedule Monthly JP','SOM_SalesPaymentsReportMonthJPSchedule','monthExport','','');   
+            Logs.info('Sales and payments report Schedule Monthly JP','SOM_SalesPaymentsReportMonthJPSchedule','monthExport','','');   
             
         }catch(Exception e){
             Logs.error(e,'SOM_SalesPaymentsReportMonthJPSchedule JP','monthExport','','');   
