--- a/unpackaged/main/default/classes/SOM_SalesPaymentsReportUKMonthSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_SalesPaymentsReportUKMonthSchedule.cls
@@ -173,8 +173,8 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
             
             Messaging.sendEmail(emails);
             
-            Logs.debug('Sales and payments report month Schedule UK','SOM_SalesPaymentsReportUKMonthSchedule','monthExport','','');   
-            Logs.info('Sales and payments report month Schedule UK','SOM_SalesPaymentsReportUKMonthSchedule','monthExport','','');   
+            Logs.debug('Sales and payments report Schedule Monthly UK','SOM_SalesPaymentsReportUKMonthSchedule','monthExport','','');   
+            Logs.info('Sales and payments report Schedule Monthly UK','SOM_SalesPaymentsReportUKMonthSchedule','monthExport','','');   
             
         }catch(Exception e){
             Logs.error(e,'SOM_SalesPaymentsReportUKMonthSchedule UK','monthExport','','');   
