--- a/unpackaged/main/default/classes/SOM_USReportMonthSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_USReportMonthSchedule.cls
@@ -148,8 +148,8 @@ public with sharing class SOM_USReportMonthSchedule Implements Schedulable {
             
             Messaging.sendEmail(emails);
             
-            Logs.debug('Sales and payments report month Schedule US','SOM_USReportMonthSchedule','monthExport','','');   
-            Logs.info('Sales and payments report month Schedule US','SOM_USReportMonthSchedule','monthExport','','');   
+            Logs.debug('Sales and payments report Schedule Monthly US','SOM_USReportMonthSchedule','monthExport','','');   
+            Logs.info('Sales and payments report Schedule Monthly US','SOM_USReportMonthSchedule','monthExport','','');   
             
         }catch(Exception e){
             Logs.error(e,'SOM_USReportMonthSchedule US','monthExport','','');   
