--- a/unpackaged/main/default/classes/SOM_SalesAndPaymentsReportMonthSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_SalesAndPaymentsReportMonthSchedule.cls
@@ -149,8 +149,8 @@ public with sharing class SOM_SalesAndPaymentsReportMonthSchedule Implements Sch
             
             Messaging.sendEmail(emails);
             
-            Logs.debug('Sales and payments report month Schedule AE','SOM_SalesAndPaymentsReportMonthSchedule','monthExport','','');   
-            Logs.info('Sales and payments report month Schedule AE','SOM_SalesAndPaymentsReportMonthSchedule','monthExport','','');   
+            Logs.debug('Sales and payments report Schedule Monthly AE','SOM_SalesAndPaymentsReportMonthSchedule','monthExport','','');   
+            Logs.info('Sales and payments report Schedule Monthly AE','SOM_SalesAndPaymentsReportMonthSchedule','monthExport','','');   
             
         }catch(Exception e){
             Logs.error(e,'SOM_SalesAndPaymentsReportMonthSchedule AE','monthExport','','');   
